# YLabProject

./: .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  test.docker-compose.yaml
admin/: Menu.xlsx
menu_app/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  tasks.py  worker.py
menu_app/admin/: Menu.xlsx
menu_app/crud/: dish.py  menu.py  submenu.py
menu_app/database/: base.py  postgres.py
menu_app/repositories/: __init__.py  app_repository.py  base_repository.py  config.py  dish.py  dish_repository.py  menu.py  menu_repository.py  submenu.py  submenu_repository.py
menu_app/routers/: __init__.py  app_router.py  dish_router.py  menu_router.py  submenu_router.py
menu_app/schemas/: __init__.py  app_schemas.py  dish.py  dish_schemas.py  menu.py  menu_schemas.py  submenu.py
menu_app/services/: __init__.py  app_service.py  base_service.py  config.py  dish.py  dish_service.py  menu.py  menu_service.py  submenu.py  submenu_service.py
tests/unit/: config.py  conftest.py  test_app.py  test_config.py  test_count_entity_from_postman.py  test_count_from_postman.py  test_crud_1_create.py  test_crud_2_retrieve.py  test_crud_3_update.py  test_crud_4_delete.py  test_crud_api.py  test_crud_create.py  test_crud_dish.py  test_crud_get.py  test_crud_get_list.py  test_crud_menu.py  test_crud_patch.py  test_crud_remove.py  test_crud_submenu.py  test_entity_not_found.py  test_get_empty_list.py  test_healthcheck.py
tests/unit/config_test/: config_app.py  config_base.py  config_dish.py  config_menu.py  config_submenu.py  test_database.py
tests/unit/config_test/test_database/: test_postgres.py
